SOLR-18139: Migrate away from Collections.empty*() methods. (#4168)
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>