@@ -243,7 +243,7 @@ public class AtomicUpdateDocumentMerger {
     // if _version_ field is not supported for in-place update, bail out early
     SchemaField versionField = schema.getFieldOrNull(CommonParams.VERSION_FIELD);
     if (versionField == null || !isSupportedFieldForInPlaceUpdate(versionField)) {
-      return Collections.emptySet();
+      return Set.of();
     }
 
     String routeFieldOrNull = getRouteField(cmd);
@@ -266,7 +266,7 @@ public class AtomicUpdateDocumentMerger {
       }
       if (!(fieldValue instanceof Map)) {
         // not an in-place update if there are fields that are not maps
-        return Collections.emptySet();
+        return Set.of();
       }
       // else it's an atomic update map...
       Map<String, Object> fieldValueMap = (Map<String, Object>) fieldValue;
@@ -275,23 +275,23 @@ public class AtomicUpdateDocumentMerger {
         Object obj = entry.getValue();
         if (!op.equals("set") && !op.equals("inc")) {
           // not a supported in-place update op
-          return Collections.emptySet();
+          return Set.of();
         } else if (op.equals("set")
             && (obj == null || (obj instanceof Collection && ((Collection) obj).isEmpty()))) {
           // when operation is set and value is either null or empty list
           // treat the update as atomic instead of inplace
-          return Collections.emptySet();
+          return Set.of();
         }
         // fail fast if child doc
         if (isChildDoc(((Map<String, Object>) fieldValue).get(op))) {
-          return Collections.emptySet();
+          return Set.of();
         }
       }
       candidateFields.add(fieldName);
     }
 
     if (candidateFields.isEmpty()) {
-      return Collections.emptySet();
+      return Set.of();
     }
 
     // second pass over the candidates for in-place updates
@@ -300,13 +300,12 @@ public class AtomicUpdateDocumentMerger {
       SchemaField schemaField = schema.getField(fieldName);
 
       if (!isSupportedFieldForInPlaceUpdate(schemaField)) {
-        return Collections.emptySet();
+        return Set.of();
       }
 
       // if this field has copy target which is not supported for in place, then empty
       for (CopyField copyField : schema.getCopyFieldsList(fieldName)) {
-        if (!isSupportedFieldForInPlaceUpdate(copyField.getDestination()))
-          return Collections.emptySet();
+        if (!isSupportedFieldForInPlaceUpdate(copyField.getDestination())) return Set.of();
       }
     }
 
@@ -323,7 +322,7 @@ public class AtomicUpdateDocumentMerger {
     }
     for (String fieldName : candidateFields) {
       if (segmentSortingFields.contains(fieldName)) {
-        return Collections.emptySet(); // if this is used for segment sorting, DV updates can't work
+        return Set.of(); // if this is used for segment sorting, DV updates can't work
       }
     }
 
@@ -497,7 +496,7 @@ public class AtomicUpdateDocumentMerger {
             .orElseGet(
                 () -> {
                   final SolrInputField replacement = new SolrInputField(name);
-                  replacement.setValue(Collections.emptyList());
+                  replacement.setValue(List.of());
                   return replacement;
                 });
 
