@@ -20,7 +20,6 @@ package org.apache.solr.cloud;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
@@ -290,7 +289,7 @@ public class CollectionPropsTest extends SolrCloudTestCase {
   private class Watcher implements CollectionPropsWatcher {
     private final String name;
     private final boolean forceReadPropsFromZk;
-    private volatile Map<String, String> props = Collections.emptyMap();
+    private volatile Map<String, String> props = Map.of();
     private final AtomicInteger triggered = new AtomicInteger();
 
     public Watcher(final String name, final boolean forceReadPropsFromZk) {
